Fix input issue on iOS
The select and touch callouts were preventing the input in the search panel.
This scopes the touch callout to only the list and the video containers and
leaves out the panels.

--- a/less/mobiletv/containers.less
+++ b/less/mobiletv/containers.less
@@ -59,6 +59,17 @@ body {
   }
 }
 
+// Make the long touch-able panels not selectable and not
+// zoomable (zoom glass in IOS)
+.up, .right {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+}
+
 // The main container (holds only left hand list).
 .up {
   width: 100%;
